src/objects/Requested_Product__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Item</label>
        <referenceTo>Merchandise__c</referenceTo>
        <relationshipLabel>Requested Products</relationshipLabel>
        <relationshipName>Requested_Products</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Number__c</fullName>
        <label>Request Number</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Requested Products</relationshipLabel>
        <relationshipName>Requested_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Requested Product</label>
    <nameField>
        <displayFormat>RP-{0000000}</displayFormat>
        <label>RP Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requested Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>